# imu-bmi088

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-check.yml  testpypi.yml
exemples/: accelerometer.py  gyroscope.py  linear_acceleration.py  orientation.py  quaternion.py  streamer.py
src/bmi088/: __init__.py  bmi088.py  params.py  streamer.py  utils.py
