[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imu-bmi088"
version = "1.0.1"
authors = [{ name = "CreatEra Robotics", email = "contact@createra.tech" }]
description = "A library for BMI088 IMU via I2C interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["smbus3>=0.5.5", "numpy>=2.2.5", "ahrs"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

[project.urls]
Homepage = "https://github.com/createra-robotics/imu-bmi088"
Issues = "https://github.com/createra-robotics/imu-bmi088/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src/"]
ignore_missing_imports = true
strict = true
